syntax = "proto3";
package gitrepomanager;

service GitRepoManager {
    rpc CreateRepository (RepositoryRequest) returns (RepositoryResponse);
    rpc DeleteRepository (RepositoryRequest) returns (RepositoryResponse);
}

message RepositoryRequest {
    string repository_path = 1;
}

message RepositoryResponse {
    string message = 1;
}
